feat(api): add route builder
